Fix fancybox z-index

--- a/src/scss/screen.scss
+++ b/src/scss/screen.scss
@@ -2149,6 +2149,11 @@ footer {
 }
 
 footer {}
+
+.fancybox-overlay {
+    z-index: 20;
+}
+
 /*************/
 /**  Fonts  **/
 /*************/
